# card_catalog

./: .coverage  .env.example  .flake8  .gitignore  PLAN.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
src/card_catalog/: config.py  main.py  utils.py
static/: app.css
static/js/: app.js
templates/: archidekt.html  base.html  card_detail.html  collection.html  dashboard.html  import.html  prices.html  settings.html
templates/errors/: 404.html
templates/partials/: archidekt_reconcile.html  archidekt_reconcile_row.html  bulk_bar.html  card_detail_inner.html  card_edit_form.html  card_grid.html  card_row.html  card_slideover.html  card_table.html  copy_row.html  empty_state.html  filter_panel.html  import_dropzone.html  import_job.html  import_preview.html  job_status.html  macros.html  nav.html  pagination.html  prices_history.html  prices_jobcard.html  settings_form.html
tests/: conftest.py  test_client_archidekt.py  test_client_manabox_csv.py  test_client_scryfall.py  test_client_tcgcsv.py  test_db_models.py  test_domain.py  test_jobs.py  test_routers_archidekt.py  test_routers_collection.py  test_routers_dashboard.py  test_routers_imports.py  test_routers_prices.py  test_routers_settings.py  test_service_archidekt.py  test_service_collection.py  test_service_enrich_scryfall.py  test_service_import_manabox.py  test_service_prices.py  test_service_settings.py  test_templates.py
tests/fixtures/: manabox_sample.csv  scryfall_bulk_data.json  scryfall_card.json  tcgcsv_prices.json
(+22 files in other folders)
